--- a/app/css/mainPageStyle.css
+++ b/app/css/mainPageStyle.css
@@ -5,7 +5,7 @@ h1 {
 	display: inline-block;
 	height: 450px;
 	width: 47%;
-	overflow-y: auto; 
+	overflow-y: auto;
 }
 #saparator{
 	display: inline-block;
@@ -17,5 +17,25 @@ h1 {
 	display: inline-block;
 	height: 450px;
 	width: 47%;
-	overflow-x: auto; 
+	overflow-x: auto;
+}
+
+#searchForm {
+	margin-left: 40px;
+}
+
+#searchInput {
+	width: 280px;
+}
+
+.search-images {
+	height: 18px;
+}
+
+#loader {
+	display: none;
+}
+
+#loader img {
+	height: 18px;
 }
