Improve the code standards and fixed a lot of bugs + reuse a lot more parts of the code

--- a/app/css/mainPageStyle.css
+++ b/app/css/mainPageStyle.css
@@ -20,7 +20,7 @@ h1 {
 	overflow-x: auto;
 }
 
-#searchForm {
+#searchDiv {
 	margin-left: 40px;
 }
 
@@ -39,6 +39,8 @@ h1 {
 #loader img {
 	height: 18px;
 }
-#msgDisplayer{
+
+#msgContainer{
 	display: none;
+	margin-bottom: 0px !important;
 }
