--- a/app/css/mainPageStyle.css
+++ b/app/css/mainPageStyle.css
@@ -7,17 +7,12 @@ h1 {
 	width: 47%;
 	overflow-y: auto;
 }
-#saparator{
-	display: inline-block;
-	height: 450px;
-	width: 4px;
-	background-color: black;
-}
 #graphContainer{
 	display: inline-block;
 	height: 450px;
 	width: 47%;
 	overflow-x: auto;
+	border-left: solid black 4px;
 }
 
 #searchDiv {
